Menambah class team

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
           </div>
            <p class="text-contents">Adalah salah satu anggota tim</p>
         </div>
+        <div class="team">
+          <div class="team-icon">
+            <img src="image/Aminur.jpg">
+             <h3>Aminur</h3>
+          </div>
+           <p class="text-contents">Adalah salah satu anggota tim</p>
+        </div>
+
         <div class="clear"></div>
       </div>
     </div>
